# rlgames

./: .gitignore  README.md  main.py  oh_hell.py  pyproject.toml  scratch.ipynb  tictactoe_tabular_q.py
gce/: README.md  create_vm.sh  startup.sh
python/: pyproject.toml
python/server/: main.py  session.py  test_session.py
python/server/agents/: __init__.py  dqn.py  nfsp.py  ppo.py  registry.py
python/server/games/: __init__.py  adapter.py  oh_hell.py  test_oh_hell.py
python/shared/: dqn.py  env_wrappers.py  test_env_wrappers.py
python/training/: config.py  oh_hell.py  ppo.py  train.py  train_dqn.py  train_nfsp.py  train_ppo.py
python/training/configs/: liars_dice_dcfr.yaml  liars_dice_mccfr.yaml  oh_hell_3tricks.yaml  oh_hell_3tricks_stable.yaml  oh_hell_full.yaml  oh_hell_nfsp_3tricks.yaml  oh_hell_ppo.yaml  oh_hell_ppo_3tricks.yaml  oh_hell_ppo_curriculum.yaml  oh_hell_ppo_variable.yaml  oh_hell_small.yaml
python/training/general/: config.py  dcfr_trainer.py  mccfr_trainer.py  ppo_trainer.py
typescript/frontend/src/: App.module.css  App.tsx  api.ts  index.css  stats.ts
typescript/frontend/src/components/: BidControls.module.css  BidControls.tsx  CardView.module.css  CardView.tsx  GameHistory.module.css  GameHistory.tsx  Hand.module.css  Hand.tsx  Scoreboard.module.css  Scoreboard.tsx  StatsPanel.module.css  StatsPanel.tsx  TrickArea.module.css  TrickArea.tsx
