[project]
name = "rlgames"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy",
    "open_spiel",
    "jupyter",
    "torch>=2.10.0",
    "matplotlib>=3.10.8",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "wandb>=0.19",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
